<resources>
    <string name="app_name">通りの達人</string>
    <string name="tab_item_title_latest">最新</string>
    <string name="tab_item_title_ranking">ランキング</string>

    <string name="actionbar_title_add_new_shop">新規登録</string>
    <string name="add_shop_edit_hint_genre">ジャンル</string>
    <string name="add_shop_fab_text">確定</string>
    <string name="add_shop_edit_hint_name">店名</string>
    <string name="add_shop_text_shopinfo">お店情報</string>
    <string name="add_shop_text_regist_photo">写真の登録</string>

    <string name="add_shop_register_select_image">画像の選択</string>
    <string name="add_shop_register_edit_image">画像の編集</string>

    <string name="add_shop_register_dialog_text_title">お店の登録で5ポイント獲得!</string>
    <string name="add_shop_register_dialog_text_message">今回登録したお店の評価を続けますか？</string>
    <string name="add_shop_register_dialog_positive_text">はい</string>
    <string name="add_shop_register_dialog_negative_text">いいえ</string>

    <string name="assessment_text_assessment">お店の評価</string>
    <string name="assessment_category_good">味　</string>
    <string name="assessment_category_near">近さ</string>
    <string name="assessment_category_cheep">安さ</string>
    <string name="assessment_text_comment">コメント</string>
    <string name="assessment_edit_text_hint">ここに記入</string>
    <string name="assessment_radar_graph">レーダーグラフ</string>
    <string name="assessment_dialog_title_text">お店の評価で3ポイント獲得！</string>
    <string name="assessment_dialog_positive_text">はい</string>

    <string name="nav_item_home">ホーム</string>
    <string name="nav_item_mypage">マイページ</string>
    <string name="tab_title_favorite">お気に入り</string>

    <string name="nav_point_format">%s pt</string>
    <string name="main_toolbar_title">ホーム</string>

    <!--    登録      -->
    <string name="start_next">次へ</string>
    <string name="start_share_title">このアプリでは小規模のチームでのご飯情報を\nみんなで共有することができます</string>
    <string name="start_title">通りの達人へようこそ</string>
    <string name="start_progress_1">1/3</string>
    <string name="start_progress_2">2/3</string>
    <string name="start_write_name">ユーザー名を登録してください</string>
    <string name="start_edit_name_hint">ユーザ名</string>
    <string name="start_progress_3">3/3</string>
    <string name="start_setting_icon">アイコンを設定してください</string>
    <string name="start_finish_register">登録を完了する</string>
    <string name="start_register_user_icon">アイコン画像の編集</string>

    <string name="cell_detail_total_score">トータル評価</string>
    <string name="cell_comment_result">個別評価</string>
    <string name="profile_point_title">ナビゲーターポイント</string>
    <string name="profile_current_title">現在の称号</string>
    <string name="profile_explain_reward"><u>(称号について)</u></string>

    <string name="detail_reward_point_text">%1$d~%2$d\nポイント</string>
    <string name="detail_reward_title">称号について</string>
    <string name="detail_reward_user_rank_title">あなたのランク</string>

    <string name="member_list_title">メンバーリスト</string>
    <string name="member_list_user_point">%1$dポイント</string>
    
    <string name="qrcode_title">QRコード</string>
    <string name="qrcode_code_title">登録コード</string>
    <string name="qrcode_error_show">QRコードの表示に失敗しました</string>
    <string name="member_list_add_member_fab_text">メンバーを追加</string>
    <string name="qrcode_description_text">相手がこのQRコードを読み取る\nもしくは登録コードを入力することで\nチームに参加することができます</string>
    <string name="register_create_photo_qr">QRコードを読み取る</string>

</resources>
