<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/basicInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/shopName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="お店の名前" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text="ジャンル" />

            <ImageView
                android:id="@+id/favoriteIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_nav_favorite"
                android:tint="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/cell_detail_total_score" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/totalRatingScore"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="bottom"
                android:textSize="24sp"
                tools:text="4.8" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/shopImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/basicInfoLayout"
        app:srcCompat="@drawable/ic_store_mall_directory_black_24dp" />

    <LinearLayout
        android:id="@+id/valuateLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/shopImage"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/assessment_category_good"
                android:textSize="20sp" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/goodRatingStar"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="3"
                android:rating="3.0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/assessment_category_near"
                android:textSize="20sp" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/distanceRatingStar"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="3"
                android:rating="3.0" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/assessment_category_cheep"
                android:textSize="20sp" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/cheepRatingStar"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="3"
                android:rating="3.0" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/shopImage" />


</androidx.constraintlayout.widget.ConstraintLayout>