<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileViewModel"
            type="com.takhaki.schoolfoodnavigator.screen.profile.ProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.profile.ProfileActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/companyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@{profileViewModel.teamName}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="チーム名" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iconImageView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/shape_rounded_select_icon"
                android:src="@drawable/ic_default_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{profileViewModel.userName}"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iconImageView"
                tools:text="名前" />

            <TextView
                android:id="@+id/navPointTitle"
                style="@style/profile_title"
                android:layout_marginTop="48dp"
                android:text="@string/profile_point_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userNameTextView" />

            <LinearLayout
                android:id="@+id/pointTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/navPointTitle">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/coin_animation"
                    app:lottie_speed="2" />

                <TextView
                    android:id="@+id/pointText"
                    style="@style/profile_big_content"
                    android:text="@{@string/nav_point_format(profileViewModel.userPoint.toString())}"
                    tools:text="ポイント" />
            </LinearLayout>

            <TextView
                android:id="@+id/rewardTitleText"
                style="@style/profile_title"
                android:layout_marginTop="20dp"
                android:text="@string/profile_current_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pointTextLayout" />

            <LinearLayout
                android:id="@+id/rewardTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rewardTitleText">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/reward_trophy_animation"
                    app:lottie_speed="1" />

                <TextView
                    android:id="@+id/shogoTextView"
                    style="@style/profile_big_content"
                    android:gravity="center"
                    android:text="@{profileViewModel.userGradeTitle}"
                    tools:text="称号" />
            </LinearLayout>

            <TextView
                android:id="@+id/aboutRewardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/profile_explain_reward"
                android:textColor="@color/darkerGrayColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rewardTextLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>